# aimforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: security-audit.yml
docs/: security-audit.md
docs/api/: ipc-commands.md
docs/architecture/: db-schema.md  scenarios.md  system-overview.md
docs/health/: AIMFORGE_HEALTH_02_FRONTEND.md  (+3 more)
server/: .env.example  Procfile  alembic.ini  docker-compose.yml  requirements.txt
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  validate.rs
src-tauri/src/aim_dna/: commands.rs  mod.rs
src-tauri/src/calibration/: commands.rs  fatigue.rs  go_no_go.rs  mod.rs  screening.rs  warmup.rs
src-tauri/src/crossgame/: commands.rs  mod.rs
src-tauri/src/db/: calibration.rs  commands.rs  dna.rs  hardware.rs  mod.rs  profiles.rs  sessions.rs  stats.rs  training.rs
src-tauri/src/fov_profile/: commands.rs  mod.rs
src-tauri/src/game_db/: commands.rs  conversion.rs  mod.rs  recoil_commands.rs
src-tauri/src/gp/: acquisition.rs  analysis.rs  kernel.rs  mod.rs  model.rs  normal.rs
src-tauri/src/hardware/: commands.rs  mod.rs
src-tauri/src/input/: commands.rs  mod.rs  raw_input.rs
src-tauri/src/movement/: commands.rs  mod.rs
src-tauri/src/training/: commands.rs  mod.rs  readiness.rs  style_transition.rs
src-tauri/src/trajectory/: commands.rs  mod.rs
src-tauri/src/zoom_calibration/: commands.rs  comparator.rs  k_fitting.rs  mod.rs
(+287 files in other folders)
